[package]
name = "ex"
version = "0.0.1"
edition = "2021"

[dependencies]
fastrand = { version = "2.0", default-features = false }
futures-core = { version = "0.3", default-features = false }
pin-project-lite = "0.2.0"
async-task = "4.7"
# concurrent-queue = "2"
slab = "0.4"
# parking = "2.2"

# [dev-dependencies]
# waker-fn = "1.0.0" # used in doctests
